--- a/config/database.yml
+++ b/config/database.yml
@@ -15,11 +15,15 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-# test:
-#   adapter: sqlite3
-#   database: db/test.sqlite3
-#   pool: 5
-#   timeout: 5000
+test:
+  adapter: postgresql
+  database: gethired_heroku_test
+  encoding: unicode
+  host: localhost
+  username: postgres
+  password: 123456
+  timeout: 5000
+
 
 # production:
 #   adapter: sqlite3
